# dnsmasq

./: .gitignore  CMakeLists.txt  README.md  dnsmasq.conf.in
bld/: get-version
contrib/ubuntu-core/: snapcraft.yaml  snapcraft_armhf.yaml  template.yaml
contrib/ubuntu-core/snap/hooks/: configure  install
src/: cache.c  config.h  dns-protocol.h  dnsmasq.c  dnsmasq.h  edns0.c  forward.c  helper.c  log.c  network.c  option.c  rfc2131.c  util.c
